# community-icons

./: CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  main.cpp  mod.json
.github/workflows/: build.yml  main.yml  multi-platform.yml
src/: DefaultIconsPopup.hpp  GamemodeViewPopup.hpp  main.cpp
